--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url('/images/defaultbg.jpg');
+    background-image: url('./images/defaultbg.jpg');
     -webkit-transition: background-image 0.8s ease-in-out;
     transition: background-image 0.8s ease-in-out;
 }
