--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
+
 body{
-    height: 100vh; 
+    height: 100%; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,7 +56,7 @@ body{
 }
 
 .search-box input::placeholder{
-    font-size: 1.4rem;
+    font-size: 1.35rem;
     font-weight: 500;
     color: #ffffff;
     text-transform: capitalize;
